--- a/Pets_R_Us/Pets_R_Us.csproj
+++ b/Pets_R_Us/Pets_R_Us.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UploadedFiles\" />
+    <Folder Include="wwwroot\UploadedFiles\Images\" />
   </ItemGroup>
 
 </Project>
