--- a/Pets_R_Us/Pets_R_Us.csproj
+++ b/Pets_R_Us/Pets_R_Us.csproj
@@ -26,6 +26,17 @@
   <ItemGroup>
     <None Remove="Views\Shared\_Layout - Copy.cshtml.css" />
   </ItemGroup>
+	<ItemGroup>
+		<None Remove="Views\Shared\_CatDogLayout.cshtml.css" />
+		<None Remove="Views\Shared\_CatLayout.cshtml.css" />
+		<None Remove="Views\Shared\_DogLayout.cshtml.css" />
+	</ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Views\Shared\_CatDogLayout.cshtml.css" />
+    <Content Include="Views\Shared\_CatLayout.cshtml.css" />
+    <Content Include="Views\Shared\_DogLayout.cshtml.css" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
@@ -43,6 +54,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\UploadedFiles\Images\" />
+	  <Folder Include="Views\Shared\" />
   </ItemGroup>
 
 </Project>
